# midgar-engine

./: .gitignore  Cargo.toml  README.md  TODO.md
examples/: shapes.rs  simple.rs  sprite_batch.rs
midgar/: Cargo.toml
midgar/examples/: sprite_batch.rs
midgar/src/: app.rs  config.rs  graphics.rs  input.rs  lib.rs  midgar.rs  sprite.rs  texture_region.rs  time.rs
midgar/src/graphics/: animation.rs  mod.rs  shape.rs  sprite.rs  texture.rs  texture_region.rs
midgar/src/graphics/shaders/: sprite.fs
midgar/src/shaders/: shape.vs  sprite.vs
sample/: Cargo.toml
sample-game/: Cargo.toml
sample-game/src/: game_app.rs  main.rs
sample/src/: game_app.rs  main.rs
src/: app.rs  graphics.rs  input.rs  lib.rs  time.rs
src/graphics/: animation.rs  mod.rs  shape.rs  sprite.rs  text.rs  texture.rs
src/graphics/shaders/: shape.fs.glsl  shape.vs.glsl  sprite.fs.glsl  sprite.vs.glsl  text.fs.glsl  text.vs.glsl
