[package]
name = "midgar"
version = "0.1.0"
authors = ["Gabriel Martinez <reitaka@gmail.com>"]

[dependencies]
glium = { version = "0.22", features = [], default-features = false }
glium_sdl2 = { git = "https://github.com/mystal/glium-sdl2", branch = "dev" }
glyph_brush = "0.2"
image = "0.20"
lyon = "0.11"
maybe-owned = "0.3"
moving-average = { git = "https://github.com/mystal/moving-average" }
nalgebra = "0.16"
nalgebra-glm = "0.2"
sdl2 = "0.31"
