[package]
name = "midgar"
version = "0.1.0"
authors = ["Gabriel Martinez <reitaka@gmail.com>"]
edition = "2018"

[dependencies]
glium = { version = "0.22", features = [], default-features = false }
glium_sdl2 = { git = "https://github.com/mystal/glium-sdl2", branch = "dev" }
glm = { version = "0.3", package = "nalgebra-glm" }
glyph_brush = "0.4"
image = "0.21"
lyon_tessellation = "0.13"
maybe-owned = "0.3"
moving-average = { git = "https://github.com/mystal/moving-average" }
nalgebra = "0.17"
sdl2 = "0.31"
