[package]
name = "midgar"
version = "0.1.0"
authors = ["Gabriel Martinez <reitaka@gmail.com>"]
edition = "2018"

[dependencies]
glium = { version = "0.25", features = [], default-features = false }
glium_sdl2 = { git = "https://github.com/mystal/glium-sdl2", branch = "dev" }
glm = { version = "0.5", package = "nalgebra-glm" }
glyph_brush = "0.6"
image = "0.22"
lyon_tessellation = "0.15"
maybe-owned = "0.3"
moving-average = { git = "https://github.com/mystal/moving-average" }
nalgebra = "0.19"
sdl2 = "0.33"
